2001-08-30  Bruno Haible  <haible@clisp.cons.org>

	Reorganize msgfmt checking options.
	* msgfmt.c: Include limits.h.
	(verbose): Renamed from verbose_level.
	(check_format_strings): Renamed from do_check.
	(check_header, check_domain, check_compatibility): New variables.
	(long_options): Add --check-domain, --check-format, --check-header,
	--check-compatibility.
	(main): Recognize options -C, --check-compatibility, --check-domain,
	--check-format, --check-header. Option -c implies the last three.
	(usage): Update.
	(format_debrief): Test check_header, not verbose_level.
	(format_directive_domain): Test check_domain, not verbose_level.
	(format_directive_message): Test check_compatibility and check_header,
	not verbose_level. Always perform the check for duplicates.
	(format_comment_special): Test check_compatibility, not verbose_level.
	(check_pair): Error if check_compatibility is true an msgid_plural is
	used.

2001-08-26  Bruno Haible  <haible@clisp.cons.org>

	* format.h: New file.
	* format-c.c: New file.
	* format-java.c: New file.
	* format-lisp.c: New file.
	* format-python.c: New file.
	* format-ycp.c: New file.
	* format.c: New file.
	* Makefile.am (msgfmt_SOURCES): Add format.c, format-c.c,
	format-java.c, format-lisp.c, format-python.c, format-ycp.c.
	(xgettext_SOURCES): Likewise.
	* message.h (enum format_type): New type.
	(format_language, format_language_pretty): New declarations.
	(parse_c_format_description_string): Remove declaration.
	(possible_format_p): Renamed from possible_c_format_p.
	(struct message_ty): Change field 'is_c_format' to an array and
	rename it to 'is_format'.
	* message.c (parse_c_format_description_string): Remove function.
	(format_language): New array.
	(format_language_pretty): New array.
	(possible_format_p): Renamed from possible_c_format_p.
	(parse_c_width_description_string): Remove function.
	(message_alloc): Update for is_format array.
	(message_copy): Likewise.
	(message_merge): Likewise.