@@ -1,3 +1,9 @@
+2001-09-01  Bruno Haible  <haible@clisp.cons.org>
+
+	* message.c (message_list_list_search): If the first match has an
+	empty translation but there is later in the list a non-empty
+	translation, return the latter one.  This fixes the msgmerge-8 test.
+
 2001-08-30  Bruno Haible  <haible@clisp.cons.org>
 
 	Reorganize msgfmt checking options.
